[package]
name = "br"
version = "0.10.0"
authors = ["programingjd"]
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.brotli]
version = "6.0"
default-features=false
features=["std","disable-timer","simd"]

[profile.release]
opt-level = "s"
lto = true
#panic = "abort"
