[package]
name = "br"
version = "0.12.0"
authors = ["programingjd"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.brotli]
version = "8.0"
default-features = false
features = ["std", "disable-timer", "simd", "disallow_large_window_size"]

[profile.release]
opt-level = "s"
lto = true
#panic = "abort"
